--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<!-- Designined by CodingLab | www.youtube.com/codinglabyt -->
+<!-- Designined by Kazi Mahabub | https://www.facebook.com/kazimahabubofficial -->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <title> Animated Colorful BAckground | CodingLab </title>
+    <title> Animated Colorful BAckground | Kazi Mahabub </title>
     <link rel="stylesheet" href="style.css">
    </head>
 <body>
